core/sr-api-macros/tests/ui/adding_at_parameter.rs
use client::decl_runtime_apis;

decl_runtime_apis! {
	pub trait Api {
		fn test(at: u64);
	}
}

fn main() {}
